generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  ADMIN
  GERENTE
  COZINHA
  ATENDENTE
  CLIENTE
}

enum CanalPedido {
  APP
  TOTEM
  BALCAO
  PICKUP
  WEB
}

enum PedidoStatus {
  AGUARDANDO_PAGAMENTO
  PAGO
  PAGAMENTO_RECUSADO
  EM_PREPARO
  PRONTO
  ENTREGUE
  CANCELADO
}

enum PagamentoStatus {
  PENDENTE
  APROVADO
  RECUSADO
}

enum FormaPagamento {
  MOCK
}

enum TipoMovimentoEstoque {
  ENTRADA
  SAIDA
  ESTORNO
}

enum TipoMovimentoFidelidade {
  CREDITO
  DEBITO
}

model Usuario {
  id          Int         @id @default(autoincrement())
  nome        String
  email       String      @unique
  senhaHash   String
  role        Role
  ativo       Boolean     @default(true)
  cliente     Cliente?
  auditorias  Auditoria[]
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt

  @@map("usuarios")
}

model Cliente {
  id                       Int                    @id @default(autoincrement())
  usuarioId                Int                    @unique
  telefone                 String
  cpf                      String?
  consentimentoFidelidade  Boolean                @default(false)
  dataConsentimento        DateTime?
  usuario                  Usuario                @relation(fields: [usuarioId], references: [id])
  pedidos                  Pedido[]
  fidelidade               Fidelidade?
  movimentosFidelidade     MovimentoFidelidade[]
  createdAt                DateTime               @default(now())
  updatedAt                DateTime               @updatedAt

  @@map("clientes")
}

model Unidade {
  id          Int                @id @default(autoincrement())
  nome        String
  cidade      String
  endereco    String
  ativa       Boolean            @default(true)
  cardapios   CardapioUnidade[]
  estoques    Estoque[]
  movimentos  MovimentoEstoque[]
  pedidos     Pedido[]
  createdAt   DateTime           @default(now())
  updatedAt   DateTime           @updatedAt

  @@map("unidades")
}

model Produto {
  id          Int                @id @default(autoincrement())
  nome        String
  descricao   String
  preco       Decimal            @db.Decimal(10, 2)
  ativo       Boolean            @default(true)
  cardapios   CardapioUnidade[]
  estoques    Estoque[]
  movimentos  MovimentoEstoque[]
  itens       ItemPedido[]
  createdAt   DateTime           @default(now())
  updatedAt   DateTime           @updatedAt

  @@map("produtos")
}

model CardapioUnidade {
  id                Int      @id @default(autoincrement())
  unidadeId         Int
  produtoId         Int
  disponivel        Boolean  @default(true)
  precoCustomizado  Decimal? @db.Decimal(10, 2)
  unidade           Unidade  @relation(fields: [unidadeId], references: [id])
  produto           Produto  @relation(fields: [produtoId], references: [id])

  @@unique([unidadeId, produtoId])
  @@map("cardapios_unidade")
}

model Estoque {
  id                Int      @id @default(autoincrement())
  unidadeId         Int
  produtoId         Int
  quantidadeAtual   Int
  quantidadeMinima  Int
  unidade           Unidade  @relation(fields: [unidadeId], references: [id])
  produto           Produto  @relation(fields: [produtoId], references: [id])
  updatedAt         DateTime @updatedAt

  @@unique([unidadeId, produtoId])
  @@map("estoque")
}

model MovimentoEstoque {
  id             Int                   @id @default(autoincrement())
  unidadeId      Int
  produtoId      Int
  tipoMovimento  TipoMovimentoEstoque
  quantidade     Int
  motivo         String
  unidade        Unidade               @relation(fields: [unidadeId], references: [id])
  produto        Produto               @relation(fields: [produtoId], references: [id])
  createdAt      DateTime              @default(now())

  @@map("movimentos_estoque")
}

model Pedido {
  id          Int           @id @default(autoincrement())
  clienteId   Int
  unidadeId   Int
  canalPedido CanalPedido
  status      PedidoStatus  @default(AGUARDANDO_PAGAMENTO)
  total       Decimal       @db.Decimal(10, 2)
  cliente     Cliente       @relation(fields: [clienteId], references: [id])
  unidade     Unidade       @relation(fields: [unidadeId], references: [id])
  itens       ItemPedido[]
  pagamento   Pagamento?
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt

  @@map("pedidos")
}

model ItemPedido {
  id             Int      @id @default(autoincrement())
  pedidoId       Int
  produtoId      Int
  quantidade     Int
  precoUnitario  Decimal  @db.Decimal(10, 2)
  subtotal       Decimal  @db.Decimal(10, 2)
  pedido         Pedido   @relation(fields: [pedidoId], references: [id])
  produto        Produto  @relation(fields: [produtoId], references: [id])

  @@map("itens_pedido")
}

model Pagamento {
  id              Int             @id @default(autoincrement())
  pedidoId        Int             @unique
  formaPagamento  FormaPagamento
  status          PagamentoStatus @default(PENDENTE)
  valor           Decimal         @db.Decimal(10, 2)
  providerMockId  String?
  payloadEnvio    Json?
  payloadRetorno  Json?
  pedido          Pedido          @relation(fields: [pedidoId], references: [id])
  createdAt       DateTime        @default(now())
  updatedAt       DateTime        @updatedAt

  @@map("pagamentos")
}

model Fidelidade {
  id            Int      @id @default(autoincrement())
  clienteId     Int      @unique
  saldoPontos   Int      @default(0)
  cliente       Cliente  @relation(fields: [clienteId], references: [id])
  updatedAt     DateTime @updatedAt

  @@map("fidelidade")
}

model MovimentoFidelidade {
  id         Int                      @id @default(autoincrement())
  clienteId  Int
  tipo       TipoMovimentoFidelidade
  pontos     Int
  motivo     String
  pedidoId   Int?
  cliente    Cliente                  @relation(fields: [clienteId], references: [id])
  createdAt  DateTime                 @default(now())

  @@map("movimentos_fidelidade")
}

model Promocao {
  id          Int      @id @default(autoincrement())
  titulo      String
  descricao   String
  ativa       Boolean  @default(true)
  dataInicio  DateTime
  dataFim     DateTime

  @@map("promocoes")
}

model Auditoria {
  id         Int      @id @default(autoincrement())
  usuarioId  Int?
  acao       String
  recurso    String
  recursoId  String?
  detalhes   Json
  ip         String?
  usuario    Usuario? @relation(fields: [usuarioId], references: [id])
  createdAt  DateTime @default(now())

  @@map("auditoria")
}
